BTWCT-923: Image Gallery: Image disappearing on drag on mobile => fix x, y coordinate on mobile; prevent scroll to top when clicking on the magnify glass

--- a/waters-aem-frontend/src/styles/image-carousel.scss
+++ b/waters-aem-frontend/src/styles/image-carousel.scss
@@ -48,6 +48,7 @@
     position: absolute;
     bottom: 22px;
     right: 19px;
+    z-index: 9999;
 
     @include mobile {
         right: 18px;
